$Id: History 73136 2013-08-19 14:28:09Z sincerti $
-------------------------------------------------------------------

     =========================================================
 		      Geant4 - Microdosimetry example
     =========================================================

                       Package History file
                       --------------------

08 Nov 2014 - M.Karamitros - microdosimetry-V10-00-03
- Clean command line options

06 Nov 2014 - M.Karamitros - microdosimetry-V10-00-02
- Check analysis manager is actived removed
- Select gui + vis from command line option 

23 Oct 2013 - V.Ivanchenko - microdosimetry-V10-00-01
- Fixed user actions and enter flexible number of threads

22 Oct 2013 - M. Karamitros - microdosimetry-V10-00-00
- confusion : 09-06 -> 10-00 - change name of the tag

22 Oct 2013 - M. Karamitros - microdosimetry-V09-06-12
- Update READMEs

22 Oct 2013 - M. Karamitros - microdosimetry-V09-06-11
- src: Add missing base class initialization

22 Oct 2013 - M. Karamitros - microdosimetry-V09-06-10
- Migration to extended
- Add missing virtuals, clean classes
- Add .README
- microdosimetry.mac -> microdosimetry.in
- CMakeLists.txt: improve configuration of mac files
- Add RunInitObserver class and make TrackingAction dependent on it

3 Oct 2013 - S. Incerti - microdosimetry-V09-06-09
- Updated CMakeLists.txt

30 Sep 2013 - I. Hrivnacova - microdosimetry-V09-06-08
- Updated for changes in analysis:
  (removal of G4AnalysisManager::Create(isMaster))

22 Aug 2013 - S. Incerti - microdosimetry-V09-06-07
- Updated README

19 Aug 2013 - S. Incerti - microdosimetry-V09-06-06
- Updated README

30 July 2013 - A.Dotti - microdosimetry-V09-06-05
- Fix compilation warnings from clang32

7 June 2013 - M. Karamitros - microdosimetry-V09-06-04
- Remove unnecessary output

7 June 2013 - M. Karamitros - microdosimetry-V09-06-03
- Code clean up and comments added for beta release

3 June 2013 - M. Karamitros - microdosimetry-V09-06-02